syntax = "proto3";
package tradingdb2pb;
option go_package = "github.com/zhs007/tradingdb2/tradingdb2pb";

// ChatBotData - chatbot data
message ChatBotData{
}

// UserData - user data
message UserData {
    string token = 1;
}